--- a/index.html
+++ b/index.html
@@ -12,8 +12,29 @@
         <h1>XO Game - JS</h1>
         <h4>version 1.00</h4>
 
+        <!-- <div class="message win">YOU <span>WIN</span></div> -->
+
         <div class="game">
-            
+            <div class="row">
+                <div class="col col-text border-all corner1">O</div>
+                <div class="col col-text border-top-bottom"></div>
+                <div class="col col-text border-all corner2"></div>
+            </div>
+            <div class="row">
+                <div class="col col-text border-right-left"></div>
+                <div class="col col-text border-none"></div>
+                <div class="col col-text border-right-left"></div>
+            </div>
+            <div class="row">
+                <div class="col col-text border-all corner3"></div>
+                <div class="col col-text border-top-bottom"></div>
+                <div class="col col-text border-all corner4"></div>
+            </div>
+        </div>
+
+        <div class="button-group">
+            <div id="retart" class="button">RESTART</div>
+            <div id="player" class="button">PLAYER : <span>O</span></div>
         </div>
 
         <a href="" class="copyrights" target="_blank">&copy; AGAHSE 2019</a>
