Logic..Done! and also vsersion 1.00 considered Done!

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <h1>XO Game - JS</h1>
         <h4>version 1.00</h4>
 
-        <!-- <div class="message win">YOU <span>WIN</span></div> -->
+        <div id="message"></div>
 
         <div class="game">
             <div class="row">
-                <div class="col col-text border-all corner1">O</div>
+                <div class="col col-text border-all corner1"></div>
                 <div class="col col-text border-top-bottom"></div>
                 <div class="col col-text border-all corner2"></div>
             </div>
@@ -33,11 +33,11 @@
         </div>
 
         <div class="button-group">
-            <div id="retart" class="button">RESTART</div>
-            <div id="player" class="button">PLAYER : <span>O</span></div>
+            <div id="restart" class="button">RESTART</div>
+            <div id="player" class="button"></div>
         </div>
 
-        <a href="" class="copyrights" target="_blank">&copy; AGAHSE 2019</a>
+        <a href="" class="copyrights" target="_blank">&copy; AGAHSE 2020</a>
     </div>
 
     <script src="main.js"></script>
