Edit copyrights link.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="player" class="button"></div>
         </div>
 
-        <a href="" class="copyrights" target="_blank">&copy; AGAHSE 2020</a>
+        <a href="https://github.com/agashe/XO-Game---JavaScript" class="copyrights" target="_blank">&copy; AGAHSE 2020</a>
     </div>
 
     <script src="main.js"></script>
